product-prices-in-basket

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<!-- page qui appler deux components header et les autres attachees -->
+    <app-header></app-header>
+    <router-outlet></router-outlet>
