--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,13 +1,18 @@
 <header>
     <div class="navbar navbar-dark bg-light shadow-sm">
         <div class="navbar-brand align-item-center d-flex">
+                  <!-- Logo de la societe -->
+
             <img src="assets/images/logo.png" style="height: 50px; width: 115px; margin-left: 22px;" alt="">
+                  <!-- la bare de Menu -->
 
             <ul class="nav-list">
                 <li>Home</li>
                 <li>Products</li>
-                <li>Login</li>
+                <li>commande</li>
             </ul>
+                <!-- zone pour chercher les produits-->
+
             <div class="form-group">
                 <input type="text" class="form-control" placeholder="search products">
             </div>
@@ -15,6 +20,7 @@
 
 
         </div>
+    <!-- code pour boutton panier avec la quantite et la taotale affichee -->
 
         <ul class="nav-list-btns">
             <li>
