--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -4,6 +4,7 @@
         
     </div>
 </div>
+<!-- code pour charger les produits dans la page paincipales avec les prix et boutton Add to Cart -->
 
 <div class="container">
     <div class="row">
