--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -31,7 +31,7 @@
                             <td><button (click)="emptycart()" class="btn btn-danger">Empty Cart</button></td>
                             <td><button routerLink="/products" class="btn btn-primary">Shop More</button></td>
                             <td><button class="btn btn-success">Checkout</button></td>
-                            <td><strong>Total:{{grandTotal}}DA</strong></td>
+                            <td style="font-size: 26px; font-weight: bold;">Total:{{grandTotal}}DA</td>
                         </tr>
                     </tbody>
                 </table>
