--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -13,7 +13,7 @@
                 <img src="{{item.image}}" alt="">
                 <h5 style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;max-width: 100ch;">{{item.title}}</h5>
                 <p style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;max-width: 100ch;">{{item.description}}</p>
-                <p><strong>Price:</strong> {{item.price}}DA</p>
+                <p><strong>Price:</strong> {{item.price.toFixed(2)}}DA</p>
                 <button class="btn btn-primary" (click)=addtocart(item)>Add to cart</button>
             </div>
         </ng-container>
